# libamp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pnpm-lock.yaml
docs/: index.md
docs/.vitepress/: config.mts
docs/zh/: index.md
src/: advanced_key.c  advanced_key.h  amp_protocol.c  amp_protocol.h  analog.c  analog.h  assign.c  assign.h  color.c  color.h  command.c  command.h  console.c  console.h  digitizer.h  driver.c  driver.h  dynamic_key.c  dynamic_key.h  encoder.c  encoder.h  event.h  event_buffer.c  event_buffer.h  event_cache.c  event_cache.h  extra_key.c  extra_key.h  file_stream.c  file_stream.h  file_system.c  file_system.h  filter.c  filter.h  gamepad.c  gamepad.h  joystick.c  joystick.h  key.c  key.h  (+27 more)
src/lamp_array/: lamp_array.c  lamp_array.h
src/log/: log.c  log.h
src/midi/: midi.c  midi_device.c  process_midi.c  process_midi.h  qmk_midi.c  qmk_midi.h
src/mquickjs/: mqjs_libamp_stdlib.c  mqjs_stdlib.c  mqjs_utils.c
test/: CMakeLists.txt
test/advanced_key/: test_advanced_key.cpp
test/analog/: test_analog.cpp
test/command/: test_command.cpp
test/dynamic_key/: test_dynamic_key.cpp
test/event/: test_event.cpp
test/extra_key/: test_extra_key.cpp
test/joystick/: test_joystick.cpp
test/key/: test_key.cpp
test/keyboard/: test_keyboard.cpp
test/large_packet/: test_large_packet.cpp
test/layer/: test_layer.cpp
test/macro/: test_macro.cpp
test/midi/: test_midi.cpp
test/mouse/: test_mouse.cpp
test/nexus/: test_nexus.cpp
test/packet/: test_packet.cpp
test/rgb/: test_rgb.cpp
test/storage/: test_storage.cpp
test/test_common/: audio.h  keyboard_conf.h  keyboard_config.h  keyboard_user.c  lfs_port.c  main.cpp  test_fixture.cpp  test_fixture.h
test/usb/: test_usb_descriptor.cpp  test_usb_serial_number.cpp  test_usb_serial_number_custom.cpp
tools/lut_generator/: lut_generator.py
tools/mqjs/: CMakeLists.txt  mqjs.c
tools/mqjs_header_generator/: CMakeLists.txt
usb/: hid_desc.h  tusb_option.h  usb_desc.c  usb_descriptor.h  usb_descriptor_compat.h  usb_serial_number.c  usb_serial_number.h  usbd.h
usb/template/cherryusb/: usbd_user.c  usbd_user.h
usb/template/cherryusb/mtp/: mtp_fs_conv.c  mtp_fs_port.c  tusb_config.h  usbd_mtp.c
